# bridge

./: .gitignore  config.example.toml  pyproject.toml
docs/: client.openapi.yaml  legacy.openapi.yaml  server.openapi.yaml
src/bridge/: __init__.py  cache.py  client.py  config.py  event.py  server.py  types.py
src/bridge/site/: auth.py  event.py  types.py
