[project]
name = "bridge"
version = "0.1.0"
description = "Legacy Bridge"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "minkedalt", email = "alt.gh@minkedup.xyz" }
]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.55.0",
]

[project.scripts]
bridge = "bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pylint>=3.3.8",
]
